--- a/gateway/gke-gateway-controller/ex3-multi-tenant-gw.yaml
+++ b/gateway/gke-gateway-controller/ex3-multi-tenant-gw.yaml
@@ -12,12 +12,17 @@ spec:
       resource: httproutes
       routeNamespaces:
         onlySameNamespace: false
+      routeSelector:
+        matchLabels:
+          route: multi-tenant
 ---
 apiVersion: networking.x-k8s.io/v1alpha1
 kind: HTTPRoute
 metadata:
   name: foobar
   namespace: foobar-ns
+  labels:
+    route: multi-tenant
 spec:
   hosts:
   - hostnames: 
@@ -40,6 +45,8 @@ kind: HTTPRoute
 metadata:
   name: bam
   namespace: bam-ns
+  labels:
+    route: multi-tenant
 spec:
   hosts:
   - hostnames: 
