--- a/gateway/gke-gateway-controller/ex2-complex-route.yaml
+++ b/gateway/gke-gateway-controller/ex2-complex-route.yaml
@@ -14,7 +14,7 @@ spec:
 apiVersion: networking.x-k8s.io/v1alpha1
 kind: HTTPRoute
 metadata:
-  name: foobar-route
+  name: my-route
   namespace: default
 spec:
   hosts:
