--- a/gateway/gke-gateway-controller/ex4-route-weight-1.yaml
+++ b/gateway/gke-gateway-controller/ex4-route-weight-1.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.x-k8s.io/v1alpha1
 kind: HTTPRoute
 metadata:
-  name: foobar-route
+  name: my-route
   namespace: default
 spec:
   hosts:
