--- a/multi-cluster-ingress/multi-cluster-ingress-basic/ingress.yaml
+++ b/multi-cluster-ingress/multi-cluster-ingress-basic/ingress.yaml
@@ -38,15 +38,14 @@ spec:
         protocol: TCP
         port: 8080
         targetPort: 8080
-  clusters:
-  - link: "us-west1-a/gke-us-west"
-  - link: "us-east4-a/gke-us-east"
 ---
 apiVersion: networking.gke.io/v1
 kind: MultiClusterService
 metadata:
   name: bar
   namespace: multi-cluster-demo
+  annotations:
+    beta.cloud.google.com/backend-config: '{"ports": {"8080":"backend-health-check"}}'
 spec:
   template:
     spec:
@@ -57,15 +56,14 @@ spec:
         protocol: TCP
         port: 8080
         targetPort: 8080
-  clusters:
-  - link: "us-west1-a/gke-us-west"
-  - link: "us-east4-a/gke-us-east"
 ---
 apiVersion: networking.gke.io/v1
 kind: MultiClusterService
 metadata:
   name: default-backend
   namespace: multi-cluster-demo
+  annotations:
+    beta.cloud.google.com/backend-config: '{"default": "backend-health-check"}'
 spec:
   template:
     spec:
@@ -76,3 +74,14 @@ spec:
         protocol: TCP
         port: 8080
         targetPort: 8080
+---
+apiVersion: cloud.google.com/v1
+kind: BackendConfig
+metadata:
+  name: backend-health-check
+  namespace: multi-cluster-demo
+spec:
+  healthCheck:
+    requestPath: /healthz
+    port: 8080
+    type: HTTP
