--- a/ingress/istio-ingress-e2e-tls/istio-ingress.yaml
+++ b/ingress/istio-ingress-e2e-tls/istio-ingress.yaml
@@ -72,7 +72,7 @@ metadata:
   namespace: default
 spec:
   hosts:
-  - "gke1.abdel.cloud"
+  - "echoserver.${DOMAIN}.com"
   gateways:
   - istio-ingressgateway
   http:
