--- a/multi-cluster-ingress/multi-cluster-blue-green-cluster/ingress.yaml
+++ b/multi-cluster-ingress/multi-cluster-blue-green-cluster/ingress.yaml
@@ -9,6 +9,34 @@ spec:
       backend:
         serviceName: default-backend
         servicePort: 8080
+      rules:
+      - host: foo.example.com
+        http:
+          paths:
+            - backend:
+                serviceName: foo
+                servicePort: 8080
+---
+apiVersion: networking.gke.io/v1
+kind: MultiClusterService
+metadata:
+  name: foo
+  namespace: multi-cluster-demo
+  annotations:
+    beta.cloud.google.com/backend-config: '{"ports": {"8080":"backend-health-check"}}'
+spec:
+  template:
+    spec:
+      selector:
+        app: foo
+      ports:
+      - name: http
+        protocol: TCP
+        port: 8080
+        targetPort: 8080
+  clusters:
+  - link: "us-west1-a/gke-1"
+  - link: "us-west1-b/gke-3"
 ---
 apiVersion: networking.gke.io/v1
 kind: MultiClusterService
