--- a/multi-cluster-ingress/multi-cluster-blue-green-cluster/app.yaml
+++ b/multi-cluster-ingress/multi-cluster-blue-green-cluster/app.yaml
@@ -32,3 +32,34 @@ spec:
             path: /healthz
             port: 8080
             scheme: HTTP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: foo
+  namespace: multi-cluster-demo
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: foo
+  template:
+    metadata:
+      labels:
+        app: foo
+        version: v1
+    spec:
+      containers:
+      - name: whereami
+        image: gcr.io/google-samples/whereami:v1.1.2
+        env:
+        - name: METADATA
+          value: "foo"
+        ports:
+          - name: http
+            containerPort: 8080
+        readinessProbe:
+          httpGet:
+            path: /healthz
+            port: 8080
+            scheme: HTTP
