--- a/gateway/gke-gateway-controller/app/store.yaml
+++ b/gateway/gke-gateway-controller/app/store.yaml
@@ -71,3 +71,40 @@ spec:
   ports:
   - port: 8080
     targetPort: 8080
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: store-german
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: store
+      version: german
+  template:
+    metadata:
+      labels:
+        app: store
+        version: german
+    spec:
+      containers:
+      - name: whereami
+        image: gcr.io/google-samples/whereami:v1.1.3
+        ports:
+          - containerPort: 8080
+        env:
+        - name: METADATA
+          value: "store-german"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: store-german
+spec:
+  selector:
+    app: store
+    version: german
+  ports:
+  - port: 8080
+    targetPort: 8080
