Update metadata for store-german :)

--- a/gateway/gke-gateway-controller/app/store.yaml
+++ b/gateway/gke-gateway-controller/app/store.yaml
@@ -95,7 +95,7 @@ spec:
           - containerPort: 8080
         env:
         - name: METADATA
-          value: "store-german"
+          value: "Gutentag!"
 ---
 apiVersion: v1
 kind: Service
