--- a/gateway/mcg-basic/gke-2/app-v2.yaml
+++ b/gateway/mcg-basic/gke-2/app-v2.yaml
@@ -1,35 +1,43 @@
+kind: Namespace
+apiVersion: v1
+metadata:
+  name: store
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: baz
-  namespace: gateway-demo
+  name: store-v2
+  namespace: store
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: baz
+      app: store
+      version: v2
   template:
     metadata:
       labels:
-        app: baz
+        app: store
+        version: v2
     spec:
       containers:
       - name: whereami
-        image: gcr.io/google-samples/whereami:v1.0.1
+        image: gcr.io/google-samples/whereami:v1.2.1
         ports:
           - containerPort: 8080
         env:
         - name: METADATA
-          value: "baz"
+          value: "store-v2"
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: baz-svc
-  namespace: gateway-demo
+  name: store-v2
+  namespace: store
 spec:
   selector:
-    app: baz
+    app: store
+    version: v2
   ports:
-  - port: 80
+  - port: 8080
     targetPort: 8080
