--- a/ingress/multi-cluster/mci-https-backend/app.yaml
+++ b/ingress/multi-cluster/mci-https-backend/app.yaml
@@ -1,8 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: multi-cluster-demo
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -43,10 +38,15 @@ spec:
         volumeMounts:
         - name: haproxy-volume
           mountPath: /usr/local/etc/haproxy
+        - name: cert-volume
+          mountPath: /usr/local/etc/haproxy-cert
       volumes:
       - name: haproxy-volume
         configMap:
           name: haproxy-config
+      - name: cert-volume
+        secret:
+          secretName: haproxy-cert
 
 ---
 apiVersion: apps/v1
@@ -89,10 +89,15 @@ spec:
         volumeMounts:
         - name: haproxy-volume
           mountPath: /usr/local/etc/haproxy
+        - name: cert-volume
+          mountPath: /usr/local/etc/haproxy-cert
       volumes:
       - name: haproxy-volume
         configMap:
           name: haproxy-config
+      - name: cert-volume
+        secret:
+          secretName: haproxy-cert
 
 ---
 apiVersion: apps/v1
@@ -134,7 +139,12 @@ spec:
         volumeMounts:
         - name: haproxy-volume
           mountPath: /usr/local/etc/haproxy
+        - name: cert-volume
+          mountPath: /usr/local/etc/haproxy-cert
       volumes:
       - name: haproxy-volume
         configMap:
           name: haproxy-config
+      - name: cert-volume
+        secret:
+          secretName: haproxy-cert
