--- a/ingress/multi-cluster/mci-shared-vpc/app.yaml
+++ b/ingress/multi-cluster/mci-shared-vpc/app.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: multi-cluster-demo
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -28,26 +33,6 @@ spec:
             path: /healthz
             port: 8080
             scheme: HTTP
-      - name: haproxy
-        image: haproxytech/haproxy-alpine:2.4
-        ports:
-          - name: https
-            containerPort: 443
-          - name: http
-            containerPort: 80
-        volumeMounts:
-        - name: haproxy-volume
-          mountPath: /usr/local/etc/haproxy
-        - name: cert-volume
-          mountPath: /usr/local/etc/haproxy-cert
-      volumes:
-      - name: haproxy-volume
-        configMap:
-          name: haproxy-config
-      - name: cert-volume
-        secret:
-          secretName: haproxy-cert
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -79,26 +64,6 @@ spec:
             path: /healthz
             port: 8080
             scheme: HTTP
-      - name: haproxy
-        image: haproxytech/haproxy-alpine:2.4
-        ports:
-          - name: https
-            containerPort: 443
-          - name: http
-            containerPort: 80
-        volumeMounts:
-        - name: haproxy-volume
-          mountPath: /usr/local/etc/haproxy
-        - name: cert-volume
-          mountPath: /usr/local/etc/haproxy-cert
-      volumes:
-      - name: haproxy-volume
-        configMap:
-          name: haproxy-config
-      - name: cert-volume
-        secret:
-          secretName: haproxy-cert
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -129,22 +94,3 @@ spec:
             path: /healthz
             port: 8080
             scheme: HTTP
-      - name: haproxy
-        image: haproxytech/haproxy-alpine:2.4
-        ports:
-          - name: https
-            containerPort: 443
-          - name: http
-            containerPort: 80
-        volumeMounts:
-        - name: haproxy-volume
-          mountPath: /usr/local/etc/haproxy
-        - name: cert-volume
-          mountPath: /usr/local/etc/haproxy-cert
-      volumes:
-      - name: haproxy-volume
-        configMap:
-          name: haproxy-config
-      - name: cert-volume
-        secret:
-          secretName: haproxy-cert
