change container image registry for grpc healthcheck

--- a/gateway/grpc/fe-deployment.yaml
+++ b/gateway/grpc/fe-deployment.yaml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: hc-proxy
-        image: gcr.io/cloud-solutions-images/grpc_health_proxy:1.0.0
+        image: docker.io/salrashid123/grpc_health_proxy:1.0.0
         args: [
           "--http-listen-addr=0.0.0.0:8080",
           "--grpcaddr=localhost:50051",
@@ -54,7 +54,7 @@ spec:
           mountPath: /certs
           readOnly: true          
       - name: grpc-app
-        image: gcr.io/cloud-solutions-images/grpc_app
+        image: docker.io/salrashid123/grpc_app
         args: [
           "/grpc_server",
           "--grpcport=0.0.0.0:50051",
