--- a/ingress/single-cluster/ingress-custom-grpc-health-check/grpc-hc-proxy.yaml
+++ b/ingress/single-cluster/ingress-custom-grpc-health-check/grpc-hc-proxy.yaml
@@ -44,7 +44,7 @@ spec:
     spec:
       containers:
       - name: hc-proxy
-        image: docker.io/salrashid123/grpc_health_proxy
+        image: docker.io/salrashid123/grpc_health_proxy:1.0.0
         args: [
           "--http-listen-addr=localhost:8081",
           "--grpc-addr=localhost:8080",
