updated domain mistake

--- a/gateway/single-cluster/global-l7-xlb/httproutes.yaml
+++ b/gateway/single-cluster/global-l7-xlb/httproutes.yaml
@@ -11,7 +11,7 @@ spec:
     - name: external-http
       namespace: default
   hostnames:
-  - "foo.ravidalal.xyz"
+  - "foo.$DOMAIN"
   rules:
   - forwardTo:
     - serviceName: foo
@@ -29,7 +29,7 @@ spec:
     - name: external-http
       namespace: default
   hostnames:
-  - "bar.ravidalal.xyz"
+  - "bar.$DOMAIN"
   rules:
   - forwardTo:
     - serviceName: bar
