--- a/gateway/docs/store-autoscale.yaml
+++ b/gateway/docs/store-autoscale.yaml
@@ -34,7 +34,7 @@ spec:
     targetPort: 8080
     name: http 
   selector:
-    app: store
+    app: store-autoscale
   type: ClusterIP
 ---
 kind: Gateway
