Updated service hostnames to be consistent.

--- a/gateway/docs/cluster-migration/onlineboutique-frontend-manifests.yaml
+++ b/gateway/docs/cluster-migration/onlineboutique-frontend-manifests.yaml
@@ -55,19 +55,19 @@ spec:
           - name: PORT
             value: "8080"
           - name: PRODUCT_CATALOG_SERVICE_ADDR
-            value: "productcatalogservice:3550"
+            value: "productcatalogservice.onlineboutique.svc.cluster.local:3550"
           - name: CURRENCY_SERVICE_ADDR
-            value: "currencyservice:7000"
+            value: "currencyservice.onlineboutique.svc.cluster.local:7000"
           - name: CART_SERVICE_ADDR
             value: "cartservice.onlineboutique.svc.clusterset.local:7070"
           - name: RECOMMENDATION_SERVICE_ADDR
-            value: "recommendationservice:8080"
+            value: "recommendationservice.onlineboutique.svc.cluster.local:8080"
           - name: SHIPPING_SERVICE_ADDR
-            value: "shippingservice:50051"
+            value: "shippingservice.onlineboutique.svc.cluster.local:50051"
           - name: CHECKOUT_SERVICE_ADDR
-            value: "checkoutservice:5050"
+            value: "checkoutservice.onlineboutique.svc.cluster.local:5050"
           - name: AD_SERVICE_ADDR
-            value: "adservice:9555"
+            value: "adservice.onlineboutique.svc.cluster.local:9555"
           # # ENV_PLATFORM: One of: local, gcp, aws, azure, onprem, alibaba
           # # When not set, defaults to "local" unless running in GKE, otherwies auto-sets to gcp 
           # - name: ENV_PLATFORM 
