--- a/ingress/multi-cluster/mci-https-e2e/app.yaml
+++ b/ingress/multi-cluster/mci-https-e2e/app.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: foo
-  namespace: asm-ingress
+  namespace: multi-cluster-demo
 spec:
   replicas: 2
   selector:
@@ -28,18 +28,123 @@ spec:
             path: /healthz
             port: 8080
             scheme: HTTP
+      - name: haproxy
+        image: haproxytech/haproxy-alpine:2.4
+        ports:
+          - name: https
+            containerPort: 443
+          - name: http
+            containerPort: 80
+        volumeMounts:
+        - name: haproxy-volume
+          mountPath: /usr/local/etc/haproxy
+        - name: cert-volume
+          mountPath: /usr/local/etc/haproxy-cert
+      volumes:
+      - name: haproxy-volume
+        configMap:
+          name: haproxy-config
+      - name: cert-volume
+        secret:
+          secretName: haproxy-cert
+
 ---
-apiVersion: v1
-kind: Service
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: foo
-  namespace: asm-ingress
+  name: bar
+  namespace: multi-cluster-demo
 spec:
-  type: ClusterIP
+  replicas: 2
   selector:
-    app: foo
-    version: v1
-  ports:
-  - name: http
-    port: 80
-    targetPort: 8080
+    matchLabels:
+      app: bar
+  template:
+    metadata:
+      labels:
+        app: bar
+        version: v1
+    spec:
+      containers:
+      - name: whereami
+        image: gcr.io/google-samples/whereami:v1.2.1
+        env:
+        - name: METADATA
+          value: "bar"
+        ports:
+          - name: http
+            containerPort: 8080
+        readinessProbe:
+          httpGet:
+            path: /healthz
+            port: 8080
+            scheme: HTTP
+      - name: haproxy
+        image: haproxytech/haproxy-alpine:2.4
+        ports:
+          - name: https
+            containerPort: 443
+          - name: http
+            containerPort: 80
+        volumeMounts:
+        - name: haproxy-volume
+          mountPath: /usr/local/etc/haproxy
+        - name: cert-volume
+          mountPath: /usr/local/etc/haproxy-cert
+      volumes:
+      - name: haproxy-volume
+        configMap:
+          name: haproxy-config
+      - name: cert-volume
+        secret:
+          secretName: haproxy-cert
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: default-backend
+  namespace: multi-cluster-demo
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: default-backend
+  template:
+    metadata:
+      labels:
+        app: default-backend
+    spec:
+      containers:
+      - name: whereami
+        image: gcr.io/google-samples/whereami:v1.2.1
+        env:
+        - name: METADATA
+          value: "default-backend"
+        ports:
+          - name: http
+            containerPort: 8080
+        readinessProbe:
+          httpGet:
+            path: /healthz
+            port: 8080
+            scheme: HTTP
+      - name: haproxy
+        image: haproxytech/haproxy-alpine:2.4
+        ports:
+          - name: https
+            containerPort: 443
+          - name: http
+            containerPort: 80
+        volumeMounts:
+        - name: haproxy-volume
+          mountPath: /usr/local/etc/haproxy
+        - name: cert-volume
+          mountPath: /usr/local/etc/haproxy-cert
+      volumes:
+      - name: haproxy-volume
+        configMap:
+          name: haproxy-config
+      - name: cert-volume
+        secret:
+          secretName: haproxy-cert
