--- a/services/multi-cluster/ilb/ilb.yaml
+++ b/services/multi-cluster/ilb/ilb.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: test-app
+  name: wheraami-ilb
   annotations:
     cloud.google.com/load-balancer-type: Internal
   labels:
-    app: test-app
+    app: wheraami-ilb
   namespace: multi-cluster-demo
 spec:
   type: LoadBalancer
