--- a/gateway/single-cluster/global-l7-xlb/gateway.yaml
+++ b/gateway/single-cluster/global-l7-xlb/gateway.yaml
@@ -1,6 +1,6 @@
 ---
 kind: Gateway
-apiVersion: networking.x-k8s.io/v1alpha1
+apiVersion: networking.x-k8s.io/v1beta1
 metadata:
   name: external-http
 spec:
