--- a/archive/demo-app.yaml
+++ b/archive/demo-app.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: whereami
-        image: gcr.io/google-samples/whereami:v1.2.10
+        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.11
         ports:
           - containerPort: 8080
         env:
@@ -56,7 +56,7 @@ spec:
     spec:
       containers:
       - name: whereami
-        image: gcr.io/google-samples/whereami:v1.2.10
+        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.11
         ports:
           - containerPort: 8080
         env:
