--- a/gateway/single-cluster/global-l7-xlb/single-cluster-global-l7-xlb-recipe.yaml
+++ b/gateway/single-cluster/global-l7-xlb/single-cluster-global-l7-xlb-recipe.yaml
@@ -27,7 +27,7 @@ spec:
     spec:
       containers:
       - name: whereami
-        image: gcr.io/google-samples/whereami:v1.2.1
+        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.11
         env:
         - name: METADATA
           value: "foo"
@@ -70,7 +70,7 @@ spec:
     spec:
       containers:
       - name: whereami
-        image: gcr.io/google-samples/whereami:v1.2.1
+        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.11
         env:
         - name: METADATA
           value: "bar"
