--- a/ingress/multi-cluster/mci-frontend-config/app.yaml
+++ b/ingress/multi-cluster/mci-frontend-config/app.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: whereami
-        image: gcr.io/google-samples/whereami:v1.2.10
+        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.11
         env:
         - name: METADATA
           value: "foo"
@@ -53,7 +53,7 @@ spec:
     spec:
       containers:
       - name: whereami
-        image: gcr.io/google-samples/whereami:v1.2.10
+        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.11
         env:
         - name: METADATA
           value: "bar"
@@ -83,7 +83,7 @@ spec:
     spec:
       containers:
       - name: whereami
-        image: gcr.io/google-samples/whereami:v1.2.10
+        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.11
         env:
         - name: METADATA
           value: "default-backend"
