--- a/gateway-api/config/servicepolicies/crd/kustomization.yaml
+++ b/gateway-api/config/servicepolicies/crd/kustomization.yaml
@@ -1,8 +1,3 @@
 resources:
-- stable/cdnpolicy.yaml
-- stable/iappolicy.yaml
-- stable/grpcrouteretrypolicy.yaml
-- stable/httprouteretrypolicy.yaml
-- stable/lbpolicy.yaml
-- stable/lbsecuritypolicy.yaml
-- stable/outlierdetectionpolicy.yaml
+- standard/healthcheckpolicy.yaml
+- standard/lbpolicy.yaml
