testing some mci recipes and fixing some issues

--- a/ingress/multi-cluster/mci-asm-https-e2e/app.yaml
+++ b/ingress/multi-cluster/mci-asm-https-e2e/app.yaml
@@ -20,6 +20,8 @@ spec:
         env:
         - name: METADATA
           value: "foo"
+        - name: ECHO_HEADERS
+          value: "True"
         ports:
           - name: http
             containerPort: 8080
