--- a/ingress/multi-cluster/mci-https-e2e/ingress.yaml
+++ b/ingress/multi-cluster/mci-https-e2e/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: foobar-ingress
   namespace: multi-cluster-demo
   annotations:
-    networking.gke.io/static-ip: x.x.x.x
+    networking.gke.io/static-ip: 34.149.198.76
     networking.gke.io/pre-shared-certs: "mci-certs"
 spec:
   template:
@@ -13,17 +13,17 @@ spec:
         serviceName: default-backend
         servicePort: 443
       rules:
-      - host: foo.$DOMAIN
-        http:
-          paths:
-            - backend:
-                serviceName: foo
-                servicePort: 443
-      - host: bar.$DOMAIN
+      - host: bar1.endpoints.$PROJECT-ID.cloud.goog
         http:
           paths:
             - backend:
                 serviceName: bar
+                servicePort: 443
+      - host: foo1.endpoints.gke-net-recipes-standalone.cloud.goog
+        http:
+          paths:
+            - backend:
+                serviceName: foo
                 servicePort: 443
 ---
 apiVersion: networking.gke.io/v1
