--- a/ingress/single-cluster/ingress-custom-http-health-check/custom-http-hc-ingress.yaml
+++ b/ingress/single-cluster/ingress-custom-http-health-check/custom-http-hc-ingress.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: hc-test
@@ -20,9 +20,13 @@ spec:
   rules:
   - http:
       paths:
-      - backend:
-          serviceName: whereami
-          servicePort: 80
+      - path: "/"
+        pathType: Prefix
+        backend:
+          service:
+            name: whereami
+            port:
+              number: 80
 ---
 apiVersion: cloud.google.com/v1
 kind: BackendConfig
