--- a/ingress/single-cluster/ingress-cloudarmor/cloudarmor-ingress.yaml
+++ b/ingress/single-cluster/ingress-cloudarmor/cloudarmor-ingress.yaml
@@ -13,18 +13,23 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: cloudarmor-test
+  annotations:
+    kubernetes.io/ingress.class: "gce"
 spec:
   rules:
   - http:
       paths:
       - path: /whereami
+        pathType: Prefix
         backend:
-          serviceName: whereami
-          servicePort: 80
+          service:
+            name: whereami
+            port: 
+              number: 80
 ---
 apiVersion: cloud.google.com/v1
 kind: BackendConfig
