Ignore vendor folder for markdown link checks
Ignore vendor folder for markdown link checks

--- a/.mlc_config.json
+++ b/.mlc_config.json
@@ -5,6 +5,9 @@
       },
       {
         "pattern": "^https://docs.github.com"
+      },
+      {
+        "pattern": "^.vendor"  
       }
     ]
 }
