--- a/.mlc_config.json
+++ b/.mlc_config.json
@@ -7,7 +7,7 @@
         "pattern": "^https://docs.github.com"
       },
       {
-        "pattern": "^.vendor"  
+        "pattern": "^vendor"  
       }
     ]
 }
